--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Css Project-1</title>
+    <title>Css Project_1</title>
 </head>
 
 <body>
